--- a/Alura Books/styles/header.css
+++ b/Alura Books/styles/header.css
@@ -12,6 +12,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 80px;
+  position: relative;
+}
+
+.cabecalho__menu-hamburguer {
+  margin-left: 20px;
+  margin-right: 15px;
 }
 
 .container {
@@ -20,5 +27,42 @@
 }
 
 .container__imagem {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.container__imagem-usuario {
+  margin-right: 20px;
+}
+
+.container__imagem-compras {
+  padding: 0.3em;
+}
+
+.lista-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  width: 60vw;
+}
+
+.container__botao:checked ~ .lista-menu {
+  display: block;
+}
+
+.lista-menu__titulo, .lista-menu__item {
   padding: 1em;
+  background-color: var(--branco);
+}
+
+.lista-menu__titulo {
+  color: var(--laranja);
+}
+
+.lista-menu__link {
+  background: var(--azul-degrade);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-transform: uppercase;
 }
