--- a/style.css
+++ b/style.css
@@ -28,6 +28,13 @@ body {
   text-align: center;
 }
 
+.hero-mobile {
+  display: none;
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
 .container {
   height: 100vh;
   display: grid;
@@ -168,4 +175,124 @@ footer {
 .container__botao:hover {
   background-color: var(--botao-azul-efeito);
   color: var(--cor-de-fundo);
+}
+
+/* Estilos responsivos */
+@media screen and (max-width: 768px) {
+  .principal {
+    background-image: none;
+  }
+
+  .hero-mobile {
+    display: block;
+    margin-bottom: 2em;
+  }
+
+  .container {
+    grid-template-columns: 1fr;
+    height: auto;
+    text-align: center;
+  }
+
+  .container__caixa {
+    margin: 2em auto;
+    max-width: 80%;
+  }
+
+  .secundario {
+    margin: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .secundario__imagem {
+    width: 50%;
+    margin: 2em auto 0;
+    display: block;
+    order: 2;
+  }
+
+  .container__descricao {
+    padding: 2em 1em;
+    order: 1;
+    margin-top: 2em;
+  }
+
+  .dispositivos__lista {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .dispositivos__lista li {
+    margin-bottom: 2em;
+  }
+
+  .dispositivos__titulo {
+    margin-top: 2em;
+  }
+
+  .rodape__lista {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .lista__link {
+    margin: 1em 0;
+  }
+
+  .rodape__logo {
+    margin-bottom: 2em;
+  }
+
+  .rodape__texto {
+    margin: 1em auto;
+    max-width: 80%;
+  }
+
+  .secundario__botao {
+    margin-top: 3em;
+    margin-bottom: 2em;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .container__titulo {
+    font-size: 22px;
+  }
+
+  .container__botao {
+    width: 100%;
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .container__botao_secundario {
+    max-width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .descricao__titulo {
+    font-size: 32px;
+  }
+
+  .secundario__imagem {
+    width: 70%;
+  }
+
+  .dispositivos__titulo {
+    font-size: 36px;
+  }
+
+  .lista__item {
+    font-size: 24px;
+  }
+
+  .container__imagem {
+    width: 80%;
+    margin: 1em auto 2em auto;
+  }
 }
